syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";

message ProductReleaseRecordInfo {
	//ID 
 	string id=2;
	//发料时间 
 	string createTime=3;
	//投料人员ID 
 	string createUserID=4;
	//当前状态 
 	string currentState=5;
	//状态变更时间 
 	string lastUpdateTime=6;
	//备注 
 	string remark=7;
	//预制产品ID 
 	string prefabricatedProductInfoID=8;
	//改制产品ID 
 	string remanufacturedProductInfoID=9;
    //生产工单号
    string productOrderNo=10;
    //产品序列号
    string productSerialNo=11;
    //产品追溯码
    string securityCode=12;
}

message QueryProductReleaseRecordRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
	//产品序列号 
    // @inject_tag: uri:"productSerialNo" form:"productSerialNo"
    string productSerialNo=8;
    //生产工单号 
    // @inject_tag: uri:"productOrderNo" form:"productOrderNo"
    string productOrderNo=9;
    //投料信息 
    // @inject_tag: uri:"securityCode" form:"securityCode"
    string securityCode=10;
    //创建时间开始 
    // @inject_tag: uri:"createTime0" form:"createTime0"
    string createTime0=11;
    //创建时间结束 
    // @inject_tag: uri:"createTime1" form:"createTime1"
    string createTime1=12;
}

message QueryProductReleaseRecordResponse{
    Code code=1;
    string message=2;
    repeated ProductReleaseRecordInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllProductReleaseRecordResponse{
    Code code=1;
    string message=2;
    repeated ProductReleaseRecordInfo data=3;
}

message GetProductReleaseRecordDetailResponse{
    Code code=1;
    string message=2;
    ProductReleaseRecordInfo data=3;
}